# CVLaboratories2021-2022

./: .gitignore  README.md
Lab1/: openImage.py  openVideo.py  testCV.py
Lab2/: 01frameDifferencing.py  02BackgroundSubtraction.py  03MOG.py
Lab3/: GFF+LK.py  kalman_filter.py  kalman_start.py  meanshift.py
Lab4/: point_cloud_start.py
Lab5/: hog.py  sift.py  viola_jones.py
extra/C++/Lab 3 - Tracking/01 GFF + LK/: CMakeLists.txt  GFF+LK.cpp  GFF+LK_press_to_referesh.cpp
extra/C++/Lab 3 - Tracking/02 MeanShift/: CMakeLists.txt  meanShift_demo.cpp  meanShift_start.cpp
extra/C++/Lab 3 - Tracking/03 Kalman/: KalmanFilter_demo.cpp  KalmanFilter_start.cpp
extra/C++/Lab2-Motion/01 FrameDifferencing/: CMakeLists.txt  frameDifferencing.cpp
extra/C++/Lab2-Motion/02 background subtraction/: CMakeLists.txt  bg.cpp  bg.h  main.cpp
extra/C++/Lab2-Motion/03 BG gaussian mixture/: CMakeLists.txt  bgMOG.cpp
extra/C++/testCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  testCV
material/: 00001640.ply  cv_lab_links.txt
material/bunny/: bunny.ply
